<resources>
    <string name="app_name">MeinLindlar</string>
    <string name="mapbox_access_token" translatable="false">pk.eyJ1IjoicGl4ZWxza3VsbCIsImEiOiJja3B4dGVjOG0wNjcxMnJvNmkxMjgwNW5uIn0.X4Y1kWyTsmm6Y2yE2a2TUQ</string>
    <string name="mapbox_custommap_uri" translatable="false">mapbox://styles/pixelskull/ckqc2n0m10gbv17mztnwa9eou</string>
    <string name="mapbox_bus_stop_layer" translatable="false">bus-map-data-250621-b0qi91</string>
    <string name="mapbox_bus_line_layer" translatable="false">routes-map-data-250621-5ep1to</string>

    <string name="tool_api_url">https://vermittlungstool.dev.bergnet.de/input/app</string>

    <string name="main_activity_no_tip">Leider konnte der Tipp des Tages nicht geladen werden...</string>

    <string name="title_activity_map">MapActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="bottom_sheet_action">Wähle eine Haltestelle auf der Karte für Informationen zu den Busfahrzeiten</string>
    <string name="bottom_sheet_title">ES FÄHRT KEIN BUS?</string>
    <string name="bottom_sheet_desc_placeholder">Jetzt LindlarMobil buchen unter \n<a href="tel:+49 2266 440 72 04">02266 440 72 04</a> \nDer lindlarer Fahrservice mit Herz.</string>

    <string name="user_location_permission_explanation">Die LiVe-App benötigt Ihre Standort Daten um die aktuelle Position auf der Karte anzuzeigen.</string>
    <string name="user_location_permission_not_granted">Standortdaten wurden nicht freigegeben</string>
    <string name="abfall_navi_logo_desc">Abfall Navi Logo</string>
    <string name="form_given_name">Ihr Vorname</string>
    <string name="form_name">Ihr Nachname</string>
    <string name="form_telephone">Ihre Telefon oder Mobilnummer</string>
    <string name="form_mail">Ihre E-Mail-Adresse</string>
    <string name="form_agreement">Hiermit erkläre ich mich einverstanden, dass meine in das Formular eingegebenen Daten elektronisch gespeichert und zum Zweck der Kontaktaufnahme verarbeitet und genutzt werden. Mir ist bekannt, dass ich meine Einwilligung jederzeit wiederrufen kann.</string>
    <string name="form_send">Absenden</string>
    <string name="form_address">Ihre Anschrift</string>
    <string name="form_topic_other">Nicht dabei? Wobei können wir helfen?</string>
    <string name="form_detail_topic">Erzählen Sie uns ein bisschen mehr zum Thema. So können wir den richtigen Experten für Sie finden.</string>
    <string name="form_home_order">Ist ein Vorort-Termin erwünscht?</string>
    <string name="form_optional_stuff">Optionale Angaben zu Ihrer Anfrage</string>
    <string name="form_date">In welchem Zeitraum sollte die Aufgabe erledigt werden?</string>
    <string name="form_date_from">Von</string>
    <string name="form_date_to">Bis</string>å
    <string name="help_topic_prompt_digital">Zu welchem Themengebiet haben Sie Fragen/wünschen Sie Unterstützung</string>
    <string name="form_topic_prompt_neighbour">Zu welcher Tätigkeit wünschen Sie zukünftig Unterstützung?</string>
    <string name="form_birth_date">Ihr Geburtsdatum</string>

    <string name="form_alert_success_title">Geschafft!</string>
    <string name="form_alert_success_text">Ihre Angaben wurden an Lindlar verbindet e.V. übermittelt.</string>

    <string name="form_alert_failure_title">Fehler</string>
    <string name="form_alert_failure_text">Bitte überprüfen Sie Ihre Angaben und versuchen es noch einmal.</string>

    <string name="form_alert_button">OK</string>

    <string name="warning_no_events">Es gibt aktuell keine Termine</string>

    <string name="news_widget_headline">LINDLARER NEWS</string>
    <string name="news_widget_placeholder">Derzeit gibt es hier keine Einträge.</string>

    <string name="village_widget_headline">ANGEBOTE</string>
    <string name="village_widget_desc">Ehrenamtliche Dienste mobil nutzen – Nachbarschaftshilfe, LindlarMobil, Taschengeldbörse und mehr.</string>

    <string name="mobil_widget_headline">MOBIL</string>
    <string name="mobil_widget_desc">Mit dem Öffentlichen Personennahverkehr unterwegs in Lindlar.</string>

    <string name="council_widget_headline">RATHAUS</string>
    <string name="council_widget_desc">Das digitale Rathaus - Onlineservices und Informationen mobil einsehen und nutzen.</string>

    <string name="event_widget_headline">TERMINE</string>
    <string name="events_widget_placeholder">Aktuell gibt es hier keinen Termin zu sehen.</string>

    <string name="survey_widget_headline">MITMACHEN!</string>
    <string name="survey_widget_desc">Nehmen Sie an Umfragen rund um das Leben in Lindlar teil.</string>

    <string name="info_imprint">IMPRESSUM</string>
    <string name="info_datenpolicy">DATENSCHUTZ</string>
    <string name="info_feedback">FEEDBACK</string>
    <string name="info_opensource">Diese App ist quelloffen und kann frei weiterentwickelt werden</string>
    <string name="info_owner_headline">Herausgeber der App</string>
    <string name="info_owner">Lindlar verbindet e.V.</string>
    <string name="info_concept_headline">Konzept + Entwicklung</string>
    <string name="info_concept">pixelskull.de</string>

    <string name="digital_desc">Mit den DigitalBegleiterInnen soll ein Angebot der digitalen Nachbarschaftshilfe geschaffen werden. Unsere ehrenamtlich Tätigen werden in Lindlar und den umliegenden Kirchdörfern zur Kontaktperson für Fragen und Hilfestellungen rund um die Nutzung von Handy, Tablet und Computer. Sie helfen bei der Lösung von Geräte-Problemen, bei der Installation oder mit Programmen und Apps. \n\nEbenso können hilfreiche Möglichkeiten besprochen werden, die das soziale Leben bereichern. Durch die Situation der letzten Monate haben sich viele Aktivitäten, Treffen und Kontakte auf den Onlinebereich verschoben. Aber wie funktioniert eigentlich eine Videokonferenz? Was ist eine Cloud? Welche Möglichkeiten bietet mir das Internet? Und wie buche ich online eine Reise? \n\nDie DigitalBegleiterInnen werden Ihnen zu diesen und vielen anderen Themen mit Rat und Tat zur Seite stehen. Über unsere Hotline können Sie zukünftig problemlos Ihr Anliegen loswerden und wir arrangieren den Kontakt zur DigitalBegleitung an Ihrem Wohnort.</string>
    <string name="pocket_money_desc">Jugendliche wünschen sich kleine Jobs, um ihr Taschengeld aufzubessern.\n\nDie Taschengeldbörse von „Lindlar verbindet e.V.“ vermittelt kostenlos den Kontakt zwischen Senioren und Jugendlichen. Wer älteren Menschen helfen und sein Taschengeld aufbessern möchte oder wer Hilfe benötigt und einen Job anbieten möchte, kann gerne das entsprechende  Formular ausfüllen.</string>
    <string name="neighbour_desc">„Lindlar verbindet e.V.“ vermittelt kleine gelegentliche Dienstleistungen, um Bedürftige im Alltagsleben zu unterstützen. Dazu sprechen wir Lindlarer Bürger an, die etwas Zeit haben mit ihren Fähigkeiten andere Menschen zu unterstützen. Gefragt sind z.B. folgende Tätigkeiten:\n\nEinkaufshilfe\nMithilfe beim Auf- oder Abbau von Kleinmöbeln\nAustausch von Lampen oder Batterien\nKleine Hilfen bei der Computer- oder Handybedienung\nAusfüllen von Formularen\nRasenmähen oder Schneeräumen, weil jemand kurzzeitig krank oder verhindert ist\nEinfache, gelegentliche Gartenarbeit\n\nWer seine Dienste anbieten möchte oder Hilfe benötigt, kann gerne das jeweils nachfolgende Formular ausfüllen oder einfach anrufen!</string>
    <string name="limo_desc">“Lindlar mobil“ (abgekürzt Limo) unterstützt seit vielen Jahren bedürftige Menschen mit dem Ziel, die Teilhabe am sozialen Leben zu erhalten oder zu ermöglichen. Menschen werden zuhause abgeholt und zu Begegnungsangeboten gefahren. Der Fahrdienst ist kostenlos, die Fahrer arbeiten ehrenamtlich. Für viele Fahrgäste ist dabei die Vertrautheit und ein gutes Gespräch mit dem Fahrer besonders wichtig.\n\nUnd “Limo“ ist kein reiner Fahrdienst, die Fahrer assistieren bei Bedarf, z.B. beim Einkaufen, indem sie mit in den Supermarkt hinein gehen und helfen, die Waren in den Korb zu legen, beim Bezahlen an der Kasse sowie beim Tragen der Taschen, bis hinauf in die eigene Wohnung. Auch die Begleitung und das Angebot einer Gehhilfe, z.B. bis hinein in die Arzt-Praxis oder die Tagespflege gehören als unterstützende Maßnahmen dazu. Für diese Assistenzleistungen nehmen wir gern eine kleine Spende an.\n\n“Lindlar mobil” fährt umweltschonend mit einem Elektromobil.</string>

    <string name="news_navigation_title">Lindlarer News</string>
    <string name="village_navigation_title">Angebote</string>
    <string name="mobil_navigation_title">Mobil</string>
    <string name="council_navigation_title">Rathaus</string>
    <string name="event_navigation_title">Termine</string>
    <string name="info_navigation_title">Informationen</string>

    <string name="digital_navigation_title">Digitalbegleitung</string>
    <string name="pocket_money_navigation_title">Taschengeldbörse</string>
    <string name="neighbour_navigation_title">Nachbarschaftshilfe</string>
    <string name="limo_navigation_title">Lindlar Mobil</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="form_help_topics_digital">
        <item>Bedienung Smartphone</item>
        <item>Bedienung Computer</item>
        <item>Updates/Apps/Programme installieren</item>
        <item>Videokonferenzen</item>
        <item>Windows</item>
        <item>macOS</item>
        <item>Android - Smartphone</item>
        <item>iOS - iPhone</item>
        <item>Anderes Thema</item>
    </string-array>

    <string-array name="form_help_topics_neighbour">
        <item>Einkaufen</item>
        <item>Erledigungsgänge</item>
        <item>Haustiere</item>
        <item>Auf- oder Abbauen von Möbeln</item>
        <item>Ausfüllen von Formularen</item>
        <item>Rasenmähen, Schneeräumen oder Kehrarbeiten</item>
        <item>Leichte Gartenarbeiten</item>
        <item>... bei einer anderen Tätigkeit</item>
    </string-array>

    <string-array name="form_help_topics_pocket_money">
        <item>Einkaufen</item>
        <item>Erledigungsgänge</item>
        <item>Haustierebetreuung</item>
        <item>Auf- oder Abbauen von Möbeln</item>
        <item>Rasenmähen, Schneeräumen oder Kehrarbeiten</item>
        <item>Leichte Gartenarbeiten</item>
        <item>Hilfe mit dem Handy/Computer</item>
        <item>... bei einer anderen Tätigkeit</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="form_dropdown_districts">
        <item>Lindlar Ort</item>
        <item>Frielingsdorf</item>
        <item>Linde</item>
        <item>Hohkeppel</item>
        <item>Schmitzhöhe</item>
        <item>Kapellensüng/Hartegasse</item>
    </string-array>
</resources>