<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.villageservices.PocketMoneyActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">
            <TextView
                android:id="@+id/pocket_money_given_name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/form_given_name"/>
            <EditText
                android:id="@+id/pocket_money_given_name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pocket_money_given_name_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:inputType="text"
                android:autofillHints=".AUTOFILL_HINT_PERSON_NAME_GIVEN"/>
            <TextView
                android:id="@+id/pocket_money_name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/pocket_money_given_name_field"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/form_name"/>
            <EditText
                android:id="@+id/pocket_money_name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pocket_money_name_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:inputType="text"
                android:autofillHints=".AUTOFILL_HINT_PERSON_NAME_FAMILY"/>
            <TextView
                android:id="@+id/pocket_money_address_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/pocket_money_name_field"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/form_address"/>
            <EditText
                android:id="@+id/pocket_money_address_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pocket_money_address_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:inputType="text"
                android:autofillHints=".AUTOFILL_HINT_POSTAL_ADDRESS"/>
            <TextView
                android:id="@+id/pocket_money_tel_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/pocket_money_address_field"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/form_telephone"/>
            <EditText
                android:id="@+id/pocket_money_tel_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pocket_money_tel_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:inputType="phone"
                android:autofillHints=".AUTOFILL_HINT_PHONE_NUMBER"/>
            <TextView
                android:id="@+id/pocket_money_mail_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/pocket_money_tel_field"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/form_mail"/>
            <EditText
                android:id="@+id/pocket_money_mail_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pocket_money_mail_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:inputType="textEmailAddress"
                android:autofillHints=".AUTOFILL_HINT_EMAIL_ADDRESS"
                android:labelFor="@id/pocket_money_mail_label"/>
            <TextView
                android:id="@+id/pocket_money_birthdate_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/pocket_money_mail_field"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/form_birth_date"/>
            <EditText
                android:id="@+id/pocket_money_birthdate_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pocket_money_birthdate_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:inputType="date"
                android:autofillHints=".AUTOFILL_HINT_BIRTH_DATE_FULL"
                android:labelFor="@id/pocket_money_mail_label"/>
            <TextView
                android:id="@+id/pocket_money_topic_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/pocket_money_birthdate_field"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/form_topic_prompt_neighbour"/>
            <Spinner
                android:id="@+id/pocket_money_topic_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:entries="@array/form_help_topics_pocket_money"
                android:prompt="@string/help_topic_prompt_digital"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.157"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pocket_money_topic_label" />
            <TextView
                android:id="@+id/pocket_money_other_topic_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/form_topic_other"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.157"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pocket_money_topic_spinner" />

            <EditText
                android:id="@+id/pocket_money_other_topic_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pocket_money_other_topic_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:inputType="text"
                android:importantForAutofill="no"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/pocket_money_detail_topic_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/pocket_money_other_topic_field"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/form_optional_stuff"/>

            <EditText
                android:id="@+id/pocket_money_detail_topic_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.526"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pocket_money_detail_topic_label" />

            <TextView
                android:id="@+id/pocket_money_date_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/pocket_money_detail_topic_field"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/form_date"/>
            <TextView
                android:id="@+id/pocket_money_date_from_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/pocket_money_date_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/form_date_from"/>
            <EditText
                android:id="@+id/pocket_money_date_from_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pocket_money_date_from_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:inputType="date"
                android:importantForAutofill="no"/>
            <TextView
                android:id="@+id/pocket_money_date_to_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/pocket_money_date_from_field"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/form_date_to"/>
            <EditText
                android:id="@+id/pocket_money_date_to_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pocket_money_date_to_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:inputType="date"
                android:importantForAutofill="no"/>
            <CheckBox
                android:id="@+id/pocket_money_agreement_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pocket_money_date_to_field"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/form_agreement"/>
            <Button
                android:id="@+id/pocket_money_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/pocket_money_agreement_checkbox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/form_send"
                android:textColor="@color/white"
                android:backgroundTint="@color/primaryHighlight"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
