<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/map_bottom_sheet"
    android:focusable="true"
    android:clickable="true"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:background="@drawable/bottom_sheet_background"
    android:backgroundTint="@color/primaryHighlight"
    android:alpha="0.85">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/bottom_sheet_action"
            android:textSize="18sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/bottom_sheet_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/bottom_sheet_title"
            android:textSize="28sp"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/bottom_sheet_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="30dp"
            android:linksClickable="true"
            android:textColorLink="@color/teal_700"
            android:text="@string/bottom_sheet_desc_placeholder"
            android:textStyle="normal"
            android:textSize="18sp"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/black"/>
</LinearLayout>